<resources>
    <string name="app_name">RoomDatabase</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="list_of_users">List of Users</string>
    <string name="add_user">Add User</string>
    <string name="add_new_user">Add New User</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="age">Age</string>
    <string name="submit">Submit</string>
    <string name="user_profile_picture">User Profile Picture</string>
    <string name="name">"Name: "</string>
    <string name="test_name">Ikemefunna asdtslkdjl</string>
    <string name="test_age">23</string>
    <string name="update">Update</string>
    <string name="delete_icon">delete icon</string>
    <string name="delete">Delete</string>
    <string name="permission_granted">Permission granted</string>
    <string name="permission_denied">Permission denied</string>
    <string name="permission_denied_1">Permission denied ONE</string>
    <string name="permission_rationale">This permission is necessary so that you can \n"set take a new picture to set as your profile picture. \nHowever, you decide to use a picture from your gallery instead.</string>
</resources>