<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/listUserFragment">

    <fragment
        android:id="@+id/listUserFragment"
        android:name="com.example.roomdatabase.view.fragments.ListUserFragment"
        android:label="@string/list_of_users"
        tools:layout="@layout/fragment_list_user" >
        <action
            android:id="@+id/action_listUserFragment_to_addUserFragment"
            app:destination="@id/addUserFragment" />
        <argument
            android:name="newUser"
            app:argType="com.example.roomdatabase.data.User" />
        <action
            android:id="@+id/action_listUserFragment_to_updateFragment"
            app:destination="@id/updateFragment" />
    </fragment>
    <fragment
        android:id="@+id/addUserFragment"
        android:name="com.example.roomdatabase.view.fragments.AddUserFragment"
        android:label="@string/add_user"
        tools:layout="@layout/fragment_add_user" >
        <action
            android:id="@+id/action_addUserFragment_to_listUserFragment"
            app:destination="@id/listUserFragment" />
    </fragment>
    <fragment
        android:id="@+id/updateFragment"
        android:name="com.example.roomdatabase.view.fragments.UpdateFragment"
        android:label="@string/update"
        tools:layout="@layout/fragment_update" >
        <action
            android:id="@+id/action_updateFragment_to_listUserFragment"
            app:destination="@id/listUserFragment" />
        <argument
            android:name="clickedUser"
            app:argType="com.example.roomdatabase.data.User" />
    </fragment>
</navigation>